Component is Added

--- a/Frontend/Stream_Hub_Interface/index.html
+++ b/Frontend/Stream_Hub_Interface/index.html
@@ -1,10 +1,64 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes"
+    />
+    <meta
+      name="description"
+      content="StreamHub - Your ultimate video streaming platform with premium content, personalized recommendations, and seamless viewing experience."
+    />
+    <meta
+      name="keywords"
+      content="video streaming, entertainment, movies, music, gaming, tech reviews, cooking, travel, fitness, education, comedy, news, sports"
+    />
+    <meta name="author" content="StreamHub Team" />
+    <meta name="theme-color" content="#ff5e62" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="StreamHub" />
+    <meta name="mobile-web-app-capable" content="yes" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://streamhub.com/" />
+    <meta
+      property="og:title"
+      content="StreamHub - Ultimate Video Streaming Platform"
+    />
+    <meta
+      property="og:description"
+      content="Your ultimate video streaming platform with premium content, personalized recommendations, and seamless viewing experience."
+    />
+    <meta property="og:image" content="/og-image.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://streamhub.com/" />
+    <meta
+      property="twitter:title"
+      content="StreamHub - Ultimate Video Streaming Platform"
+    />
+    <meta
+      property="twitter:description"
+      content="Your ultimate video streaming platform with premium content, personalized recommendations, and seamless viewing experience."
+    />
+    <meta property="twitter:image" content="/og-image.jpg" />
+
+    <!-- Preconnect to external domains for performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Load Inter font for better typography -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>StreamHub - Ultimate Video Streaming Platform</title>
   </head>
   <body>
     <div id="root"></div>
